--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,17 @@
 aniso8601==6.0.0
-Click==7.0
-Flask==1.0.3
-Flask-Cors==3.0.7
-Flask-RESTful==0.3.7
-Flask-SQLAlchemy==2.4.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-psycopg2-binary==2.8.2
+click==8.1.3
+colorama==0.4.5
+Flask==2.2.2
+Flask-Cors==3.0.10
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pip==22.2.2
+psycopg2==2.9.3
 pytz==2019.1
+setuptools==63.2.0
 six==1.12.0
-SQLAlchemy==1.3.4
-Werkzeug==0.15.5
+SQLAlchemy==1.4.40
+Werkzeug==2.2.2
